# cb-project-metadata-updater

./: .gitignore  Cargo.toml  README.md  buildspec.yaml
src/: crate_helper.rs  main.rs  metadata_updater.rs
