[package]
name = "update-pkg-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.5.2"
aws-sdk-dynamodb = "0.5.2"
cargo_toml = "0.10.3"
env_logger = "0.9.0"
futures = "0.3.19"
log = "^0.4"
tokio = { version = "1", features = ["full"] }