[package]
name = "cb-project-metadata-updater"
homepage = "https://github.com/alexanderpolson/cb-project-metadata-updater"
repository  = "https://github.com/alexanderpolson/cb-project-metadata-updater"
documentation = "https://github.com/alexanderpolson/cb-project-metadata-updater"
description = "Tracks relationships between source code and their AWS Code Build projects to coordinate rebuilds of consumers when changes are made."
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
aws-sdk-codebuild = "0.6.0"
cargo_toml = "0.10.3"
env_logger = "0.9.0"
futures = "0.3.19"
log = "^0.4"
once_cell = "1.9.0"
regex = "1.5.4"
tokio = { version = "1", features = ["full"] }